--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "grunt test",
     "build": "grunt build",
-    "preview": "grunt server"
+    "preview": "grunt preview"
   },
   "repository": {
     "type": "git",
